@@ -1,1 +1,36 @@
 # for-developers-java17
+
+see https://www.oracle.com/java/technologies/javase/jdk-relnotes-index.html
+
+# 8 -> 17
+
+### Java 9 Module
+### Java 10 local variable - var keyword
+### GC improvements 
+### Container support  -XX:-UseContainerSupport -XX:ActiveProcessorCount=count -XX:SoftMaxHeapSize -XX:+UseZGC
+### Number format
+### Text blocks
+### Record
+### ShowCodeDetailsInExceptionMessages by default
+### Hidden Classes
+### Pattern Matching for instanceof
+### Sealed Classes
+### Packaging Tool
+- jpackage --input build/libs/ --name myApp --main-jar java17-0.0.1-SNAPSHOT.jar --type exe
+- https://github.com/wixtoolset/wix3/releases/tag/wix3112rtm
+- requires .NET 3.5.1
+### Enhanced Pseudo-Random Number Generators
+### Pattern Matching for Switch - can get pretty messy - not sure if this is not a bad practice
+### Others like Foreign Linker API, Foreign-Memory Access API, Vector API 
+
+
+# 17 -> 20
+
+### Incubator features & Preview features continue ...
+### Virtual threads preview
+### Structured concurency incubator
+### Scoped values preview
+### ...
+
+
+
